# gitportfolio

./: .gitignore  LICENSE  README.md  README.pypi.md  SECURITY.md  action.yaml  pyproject.toml
data/: PROFILE.md  TEMPLATE.md  config.yaml
gitportfolio/: cache.py  config.py  dsl.py  exceptions.py  facade.py  filters.py  formatter.py  github.py  helpers.py  logger.py  main.py  sorters.py
gitportfolio/custom_datasources/: get_archived_repos.py  get_contribution_repos.py  get_education_repos.py  get_focused_repos.py
